fix(ui): Wrong background/foreground colours applied based on system mode. Also formatting tailwind config file.

--- a/ui/app/globals.css
+++ b/ui/app/globals.css
@@ -7,13 +7,6 @@
     --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
-    :root {
-        --background: #0a0a0a;
-        --foreground: #ededed;
-    }
-}
-
 .scribbl-canvas-shadow {
     box-shadow: 0px 0.3rem 13px rgba(0, 0, 0, 0.7);
 }
